--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <body>
 
-  <h2>HackCARES: Helping Yourself</h2>
-
+  <h1>HackCARES: Helping Yourself</h1>
+  <p>Taking care of yourself is more than just fulfilling a checkbox.</p>
+    
   </body>
 </html>
