--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <body>
+<style>
+body {
+  background-color: lightblue;
+}
 
+h1 {
+  color: white;
+  text-align: left;
+  font-family: verdana;
+  font-size: 40px
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+</head>
+
+  <body>
+    
   <h1>HackCARES: Helping Yourself</h1>
   <p>Taking care of yourself is more than just fulfilling a checkbox.</p>
     
