--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ body {
 h1 {
   color: white;
   text-align: left;
-  font-family: verdana;
+  font-family: helvetica;
   font-size: 40px
 }
 
 p {
-  font-family: verdana;
+  font-family: helvetica;
   font-size: 20px;
 }
 </style>
