--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ body {
 h1 {
   color: white;
   text-align: left;
-  font-family: helvetica;
+  font-family: tahoma;
   font-size: 40px
 }
 
 p {
-  font-family: helvetica;
+  font-family: tahoma;
   font-size: 20px;
 }
 </style>
@@ -25,4 +25,5 @@ p {
   <p>Taking care of yourself is more than just fulfilling a checkbox.</p>
     
   </body>
+<button type "happy"> Click Me! </button>
 </html>
