--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@ p {
   <p>Taking care of yourself is more than just fulfilling a checkbox.</p>
     
   </body>
-<button type "happy"> Click Me! </button>
+.button1
+{
+border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+<button type "button button1"> Click Me! </button>
 </html>
