--- a/index.html
+++ b/index.html
@@ -22,21 +22,8 @@ p {
   <body>
     
   <h1>HackCARES: Helping Yourself</h1>
-  <p>Taking care of yourself is more than just fulfilling a checkbox.</p>
+  <p>Self-care describes the conscious effort of promoting one's own physical, emotional, and mental health through self-loving actions.</p>
     
   </body>
-.button1
-{
-border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-<button type "button button1"> Click Me! </button>
+<button type "happy"> Click Me! </button>
 </html>
