--- a/index.html
+++ b/index.html
@@ -25,5 +25,17 @@ p {
   <p>Self-care describes the conscious effort of promoting one's own physical, emotional, and mental health through self-loving actions.</p>
     
   </body>
-<button type "happy"> Click Me! </button>
+.button1 {
+border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+<button class = "button button1"> Happy! </button>
 </html>
