--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p {
   <body>
     
   <h1>HackCARES: Helping Yourself</h1>
-  <p>Self-care describes the conscious effort of promoting one's own physical, emotional, and mental health through self-loving actions.</p>
+  <p>Self-care describes the conscious effort of promoting one's own physical, social, emotional, mental, and spiritual health through self-loving actions.</p>
     
   </body>
 .button1 {
