--- a/index.html
+++ b/index.html
@@ -16,9 +16,20 @@ p {
   font-family: tahoma;
   font-size: 20px;
 }
+  .button1 {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
   
 }
-<button class = "button button1"> Happy! </button>
+
 </style>
   
 </head>
@@ -29,5 +40,5 @@ p {
   <p>Self-care describes the conscious effort of promoting one's own physical, social, emotional, mental, and spiritual health through self-loving actions.</p>
     
   </body>
-
+  <button class = "button button1"> Happy! </button>
 </html>
