--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ p {
 }
   .button1 {
   border: none;
-  color: blue;
+  color: dark blue;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
