--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ p {
 }
   .button1 {
   border: none;
-  color: dark blue;
+  color: green;
   padding: 15px 32px;
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
