--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box}
   body {
     font-family: Verdana, sans-serif; 
-    margin:0;
-    background-color: lightblue; 
+    background-color: lightblue;
+    margin:0 
   }
 
   h1 {
@@ -28,7 +29,7 @@
   }
 
   /* Slides */
-  .quoteSlides {
+  .mySlides {
     display: none;
     padding: 80px;
     text-align: center;
@@ -87,7 +88,9 @@
   }
 
   /* Add an italic font style to all quotes */
-  q {font-style: italic;}
+  q {
+    font-style: italic;
+  }
 
   /* Add a blue color to the author */
   .author {color: cornflowerblue;}
@@ -103,25 +106,26 @@
     margin: 8px 2px;
     cursor: pointer;
   }
+ 
 </style>
 </head>
 <body>
 
 <h1>HackCARES: Helping Yourself</h1>
-<p>Self-care describes the conscious effort of promoting one's own physical, social, emotional, mental, and spiritual health through self-loving actions.</p>
+<p>Self-care describes the conscious effort of promoting one's own physical, social, emotional, mental, and spiritual health through self-loving actions.</p> 
 
 <div class="slideshow-container">
-  <div class="quoteSlides">
+  <div class="mySlides">
     <q>The more you work on yourself personally, the more you can work on yourself professsionally.</q>
     <p class="author">- Sarah King</p>
   </div>
 
-  <div class="quoteSlides">
+  <div class="mySlides">
     <q>Talk to yourself like you would to someone you love.</q>
     <p class="author">- Brene Brown</p>
   </div>
 
-  <div class="quoteSlides">
+  <div class="mySlides">
     <q>Self-care means giving yourself permission to pause.</q>
     <p class="author">- Cecilia Tran</p>
   </div>
