--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
 * {box-sizing: border-box}
   body {
     font-family: Verdana, sans-serif; 
-    background-color: lightblue;
+    background-color: darkturquoise;
     margin:0 
   }
 
   h1 {
-    color: white;
+    color: black;
     text-align: left;
     font-family: tahoma;
     font-size: 40px
   }
 
   p {
+  	text-align: center;
     font-family: tahoma;
     font-size: 20px;
   }
@@ -107,6 +108,20 @@
     cursor: pointer;
   }
  
+  h2 {
+    color: coral;
+    text-align: center;
+    font-family: tahoma;
+    font-size: 25px
+  }
+  
+  h3 {
+    color: black;
+    text-align: center;
+    font-family: tahoma;
+    font-size: 32px; 
+  }
+  
 </style>
 </head>
 <body>
@@ -175,6 +190,14 @@ function showSlides(n) {
 }
 </script>
 
+<h2>Let's check on how you're doing.</h2>
+  <h3>Physical Health</h3>
+  <h3>Social Health</h3>
+  <h3>Mental Health</h3>
+  <h3>Spiritual Health</h3>
+  <h3>Emotional Health</h3>
+  
+  
 </body>
 
 <button class = "button button1"> Happy! </button>
