--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 * {box-sizing: border-box}
   body {
     font-family: Verdana, sans-serif; 
-    background-color: darkturquoise;
+    background-color: lightblue;
     margin:0 
   }
 
