--- a/index.html
+++ b/index.html
@@ -95,18 +95,6 @@
 
   /* Add a blue color to the author */
   .author {color: cornflowerblue;}
-  
-  .button1 {
-    border: none;
-    color: green;
-    padding: 15px 32px;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 8px 2px;
-    cursor: pointer;
-  }
  
   h2 {
     color: coral;
@@ -117,11 +105,30 @@
   
   h3 {
     color: black;
-    text-align: center;
+    text-align: left;
     font-family: tahoma;
     font-size: 32px; 
   }
   
+  .button {
+  border: 2px solid;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0px 3px;
+  cursor: pointer;
+  border-radius: 100%
+  }
+
+  .button1 {background-color: red}
+  .button2 {background-color: orange}
+  .button3 {background-color: yellow}
+  .button4 {background-color: yellowgreen}
+  .button5 {background-color: green}
+
 </style>
 </head>
 <body>
@@ -191,14 +198,40 @@ function showSlides(n) {
 </script>
 
 <h2>Let's check on how you're doing.</h2>
-  <h3>Physical Health</h3>
-  <h3>Social Health</h3>
-  <h3>Mental Health</h3>
-  <h3>Spiritual Health</h3>
-  <h3>Emotional Health</h3>
+<h3>Physical Health</h3>
+<button class="button button1"></button>
+<button class="button button2"></button>
+<button class="button button3"></button>
+<button class="button button4"></button>
+<button class="button button5"></button>
+
+<h3>Social Health</h3>
+<button class="button button1"></button>
+<button class="button button2"></button>
+<button class="button button3"></button>
+<button class="button button4"></button>
+<button class="button button5"></button>
   
+<h3>Mental Health</h3>
+<button class="button button1"></button>
+<button class="button button2"></button>
+<button class="button button3"></button>
+<button class="button button4"></button>
+<button class="button button5"></button>
+  
+<h3>Spiritual Health</h3>
+<button class="button button1"></button>
+<button class="button button2"></button>
+<button class="button button3"></button>
+<button class="button button4"></button>
+<button class="button button5"></button>
+  
+<h3>Emotional Health</h3>
+<button class="button button1"></button>
+<button class="button button2"></button>
+<button class="button button3"></button>
+<button class="button button4"></button>
+<button class="button button5"></button> 
   
 </body>
-
-<button class = "button button1"> Happy! </button>
 </html>
