--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </head>
 <body>
 
-<h1>HackCARES: Helping Yourself</h1>
+<h1>HackCARE: Helping Yourself</h1>
 <p>Self-care describes the conscious effort of promoting one's own physical, social, emotional, mental, and spiritual health through self-loving actions.</p> 
 
 <div class="slideshow-container">
