Added shadow buttons

--- a/index.html
+++ b/index.html
@@ -111,23 +111,29 @@
   }
   
   .button {
-  border: 2px solid;
-  color: black;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 0px 3px;
-  cursor: pointer;
-  border-radius: 100%
+    border: 2px solid;
+    color: black;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 0px 3px;
+    cursor: pointer;
+    border-radius: 100%;
+    transition-duration: 0.4s;
   }
 
-  .button1 {background-color: red}
+  .button1 {background-color: red}    
+  .button1:hover{background-color: darkred}
   .button2 {background-color: orange}
+  .button2:hover{background-color: #D0730D} /*dark orange*/
   .button3 {background-color: yellow}
+  .button3:hover{background-color: #CCCC00} /*dark yellow*/
   .button4 {background-color: yellowgreen}
+  .button4:hover{background-color: #728F02} /*dark yellow green*/
   .button5 {background-color: green}
+  .button5:hover{background-color: #013220} /*dark green*/
 
 </style>
 </head>
