Added gradient background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 * {box-sizing: border-box}
   body {
     font-family: Verdana, sans-serif; 
-    background-color: lightblue;
+    background-color: lightblue; /*when gradient not possible */
+    background-image: linear-gradient(to bottom right, lightblue, coral);
     margin:0 
   }
 
