--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
    /* Slideshow container */
   .slideshow-container {
     position: relative;
-    background: #f1f1f1f1;
+    background: #f1f1f1f1; opacity: 0.8
   }
 
   /* Slides */
   .mySlides {
     display: none;
-    padding: 80px;
+    padding: 20px;
     text-align: center;
   }
 
@@ -68,8 +68,7 @@
   /* The dot/bullet/indicator container */
   .dot-container {
       text-align: center;
-      padding: 20px;
-      background: #ddd;
+      background: #f1f1f1f1; opacity: 0.8
   }
 
   /* The dots/bullets/indicators */
