--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   body {
     font-family: Verdana, sans-serif; 
     background-color: lightblue; /*when gradient not possible */
-    background-image: linear-gradient(to bottom right, coral, lightblue);
+    /*background-image: linear-gradient(to bottom right, coral, lightblue);*/
     margin:0 
   }
 
